menambahkan sedikit pesan

--- a/exer2.html
+++ b/exer2.html
@@ -5,7 +5,10 @@
 </HEAD>
 
 <BODY>
-	<H1> ABC</H1>
+	<H1> ABC </H1>
 	<h3> DEFG</h3>
+	 <p>
+        <font>Jangan lupa bahagia</font>
+    </p>
 </BODY>
 </HTML>
